# cadmium

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
agent/: agent.py  cadquery_resources.py  executor.py  prompts.py  recap_streamer.py  visual.py
cadmium/: __main__.py  example_params.json  examples.yaml
cadmium/agent/: agent.py  cadquery_resources.py  executor.py  prompts.py  recap_streamer.py  utils.py  visual.py
cadmium/scripts/: convert_csv.py  run_custom.py  run_fast_agent.py
cadmium/stl_to_pics/: render.py
example_logic/: example.py
scripts/: .gitignore  get_feedback.py  run_agent.py  stl_to_pics.py
stl_to_pics/: render.py
